@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------------
- *	$Id: pssegy_func.c,v 1.8 2011-05-19 15:18:56 remko Exp $
+ *	$Id: pssegy_func.c,v 1.9 2011-05-20 15:13:57 remko Exp $
  *
  *    Copyright (c) 1999-2011 by T. Henstock
  *    See README file for copying and redistribution conditions.
@@ -108,11 +108,7 @@ void *New_pssegy_Ctrl (struct GMT_CTRL *GMT) {	/* Allocate and initialize a new 
 
 	/* Initialize values whose defaults are not 0/FALSE/NULL */
 
-#ifdef WORDS_BIGENDIAN
-	C->A.active = FALSE;
-#else
-	C->A.active = TRUE;
-#endif
+	C->A.active = !GMT_BIGENDIAN;
 	C->M.value = 10000;
 	C->Q.value[X_ID] = 1.0; /* Ctrl->Q.value[X_ID], Ctrl->Q.value[Y_ID] are trace and sample interval */
 	return ((void *)C);
@@ -540,7 +536,7 @@ GMT_LONG GMT_pssegy (struct GMTAPI_CTRL *API, struct GMT_OPTION *options)
 	if ((check = get_segy_binhd (fpi, &binhead)) != TRUE) Return (GMT_RUNTIME_ERROR);
 
 	if (Ctrl->A.active) {
-		/* this is a little-endian system, and we need to byte-swap ints in the reel header - we only
+		/* this is a little-endian system, and we need to byte-swap ints in the header - we only
 		   use a few of these*/
 		GMT_report (GMT, GMT_MSG_NORMAL, "swapping bytes for ints in the headers\n");
 		binhead.num_traces = GMT_swab2 (binhead.num_traces);
