@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.1041 2011-05-20 14:02:59 remko Exp $
+	$Id: ChangeLog,v 1.1042 2011-05-20 15:13:57 remko Exp $
 -----------------------------------------------------------------------------------------
 
 2011-05-20	jluis
@@ -10,6 +10,7 @@
 	* gmt_math.h:		No longer include gmt_notposix.h (moved to gmt.h and pslib.c)
 	* pslib.c, gmt.h:	For logical reasons, include BOTH gmt_notunix.h, then gmt_notposix.h
 	* gmt_notunix.h:	No longer define SET_IN_NOTUNIX, but simply define _GMT_NOTPOSIX_H.
+	* gmt_constants.h:	Introduced constants GMT_BIGENDIAN (0/1), GMT_ENDIAN ('L'/'B')
 
 2011-05-19	remko
 	* pslib.c, pslib_f77.c:	Split off Fortran bindings
